[gd_scene load_steps=15 format=3 uid="uid://ftxp4shodc50"]

[ext_resource type="Script" path="res://Scenes/UI_scenes/main_menu.gd" id="1_oemx4"]
[ext_resource type="Texture2D" uid="uid://k0iffxp6fqkw" path="res://sprites/HUD/pause_buttons/main_menu_button_hover.png" id="1_urdqv"]
[ext_resource type="LabelSettings" uid="uid://c28wx78vj7ejo" path="res://fonts/settings.tres" id="3_mlye4"]
[ext_resource type="Texture2D" uid="uid://bkm55hfckjxon" path="res://sprites/HUD/main menu/main menu-Sheet.png" id="5_pbmkf"]
[ext_resource type="AudioStream" uid="uid://hug8v3u8o4lv" path="res://Audio/SFX/Menu/CURSOL_MOVE.wav" id="6_qkybr"]
[ext_resource type="AudioStream" uid="uid://sqje2q0djoo1" path="res://Audio/SFX/Menu/CURSOL_SELECT.wav" id="7_4ewre"]
[ext_resource type="Script" path="res://Scenes/UI_scenes/Title.gd" id="7_mb7mv"]
[ext_resource type="AudioStream" uid="uid://cvl4xunh1pyk8" path="res://Audio/SFX/Menu/CURSOL_OK.wav" id="8_j8wmi"]
[ext_resource type="AudioStream" uid="uid://caxvwsanlkksl" path="res://Audio/SFX/Menu/CURSOL_CANCEL.wav" id="9_xpg1h"]

[sub_resource type="Animation" id="Animation_75iwr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_y0evn"]
resource_name = "idle"
length = 1.25
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3), Vector2i(0, 4)]
}

[sub_resource type="Animation" id="Animation_77ii8"]
resource_name = "wake_up"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3), Vector2i(1, 4), Vector2i(1, 5), Vector2i(1, 6)]
}

[sub_resource type="Animation" id="Animation_u65iu"]
resource_name = "woke_idle"
length = 0.75
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 5.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(0, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sac33"]
_data = {
"RESET": SubResource("Animation_75iwr"),
"idle": SubResource("Animation_y0evn"),
"wake_up": SubResource("Animation_77ii8"),
"woke_idle": SubResource("Animation_u65iu")
}

[node name="Main_Menu" type="Control" node_paths=PackedStringArray("any_button", "a_move", "a_ok", "a_any_button", "a_cancel")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_oemx4")
any_button = NodePath("any_button")
a_move = NodePath("MOVE")
a_ok = NodePath("OK")
a_any_button = NodePath("ANYBUTTION")
a_cancel = NodePath("CANCEL")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="buttons" type="Node2D" parent="."]
visible = false

[node name="play" type="TextureButton" parent="buttons"]
offset_left = 512.0
offset_top = 528.0
offset_right = 576.0
offset_bottom = 546.0
scale = Vector2(4, 4)
texture_hover = ExtResource("1_urdqv")

[node name="play_label" type="Label" parent="buttons/play"]
layout_mode = 0
offset_left = 19.25
offset_top = 4.5
offset_right = 97.25
offset_bottom = 34.5
scale = Vector2(0.35, 0.35)
text = "Play"
label_settings = ExtResource("3_mlye4")

[node name="quit" type="TextureButton" parent="buttons"]
offset_left = 512.0
offset_top = 624.0
offset_right = 576.0
offset_bottom = 642.0
scale = Vector2(4, 4)
texture_hover = ExtResource("1_urdqv")

[node name="quit label" type="Label" parent="buttons/quit"]
layout_mode = 0
offset_left = 18.25
offset_top = 4.5
offset_right = 96.25
offset_bottom = 34.5
scale = Vector2(0.35, 0.35)
text = "Quit"
label_settings = ExtResource("3_mlye4")
horizontal_alignment = 1

[node name="Title" type="Sprite2D" parent="." node_paths=PackedStringArray("menu", "buttons")]
position = Vector2(640, 219)
scale = Vector2(4, 4)
texture = ExtResource("5_pbmkf")
hframes = 3
vframes = 7
script = ExtResource("7_mb7mv")
menu = NodePath("..")
buttons = NodePath("../buttons")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
libraries = {
"": SubResource("AnimationLibrary_sac33")
}

[node name="any_button" type="Label" parent="."]
layout_mode = 0
offset_left = 492.0
offset_top = 608.0
offset_right = 789.0
offset_bottom = 638.0
text = "Press Any Button"
label_settings = ExtResource("3_mlye4")
horizontal_alignment = 1

[node name="MOVE" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qkybr")
volume_db = -20.0
bus = &"SFX"

[node name="OK" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4ewre")
volume_db = -20.0
bus = &"SFX"

[node name="ANYBUTTION" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_j8wmi")
volume_db = -20.0
bus = &"SFX"

[node name="CANCEL" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xpg1h")
volume_db = -20.0
bus = &"SFX"

[connection signal="mouse_entered" from="buttons/play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="buttons/play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="buttons/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="buttons/quit" to="." method="_on_quit_pressed"]
